ingress-prometheus.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-grafana
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.local`)
      kind: Rule
      services:
        - name: prometheus-community-kube-prometheus
          port: 9090
    - match: Host(`grafana.local`)
      kind: Rule
      services:
        - name: prometheus-community-grafana
          port: 80
